# oximark

./: .gitignore  .npmignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  playground.yml  release.yml
benchmark/: all_features.md  bun-bench.mjs  generators.mjs  parse.rs  report.mjs
benchmark/history/: 2026-04-08_22-41-07.json  2026-04-09_11-33-04.json  2026-04-11_11-35-48.json  2026-04-11_22-45-30.json  2026-04-12_17-33-15.json  2026-04-13_09-02-56.json  2026-04-13_09-12-16.json  2026-04-19_23-43-20.json  2026-04-20_08-40-50.json  2026-04-20_09-07-11.json  2026-04-21_10-26-34.json  2026-05-15_13-40-57.json  2026-05-15_14-05-31.json
include/: ironmark.h
playground/: package.json  pnpm-lock.yaml  vite.config.ts
playground/src/: App.tsx  playground.ts  style.css
playground/src/components/: AstToMarkdownPage.tsx  BenchmarkPage.tsx  CopyButton.tsx  Header.tsx  HtmlToMarkdownPage.tsx  MarkdownEditor.tsx  OptionsPanel.tsx  OutputTabs.tsx  SplitPanels.tsx  types.ts
playground/src/editor/: ast-tree.ts  highlight.ts  setup.ts
src/: ast.rs  ffi.rs  html.rs  lib.rs  render.rs
src/ansi/: constants.rs  inline.rs  mod.rs  renderer.rs  table.rs  wrap.rs
src/block/: html_block.rs  leaf_blocks.rs  link_ref_def.rs  mod.rs  parser.rs
src/html_parser/: inline.rs  mod.rs  parser.rs  tokenizer.rs
src/inline/: em_delims.rs  fast_path.rs  links.rs  mod.rs  render.rs  scanner.rs
src/render/: mod.rs  slug.rs
src/renderers/: markdown.rs
tests/: ansi.rs  commonmark_spec.rs  html_parser.rs  parser.rs  roundtrip.rs
wasm/: Cargo.toml  build.mjs  cli.js  index.d.ts  shared.js  web.js
wasm/src/: lib.rs
