[package]
name = "ironmark-wasm"
version = "0.1.0"
edition = "2024"
publish = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[lib]
name = "ironmark"
crate-type = ["cdylib"]

[dependencies]
ironmark = { path = "..", features = ["serde"] }
serde_json = "1"
wasm-bindgen = "0.2.118"
